[package]
name = "ftth-rtnl"
version = "0.2.1"
edition = "2024"

authors = ["Menhera.org Developers"]
description = "RTnetlink components for `ftth` suite of Rust FTTH CPE software."
license = "Apache-2.0 OR MPL-2.0"
readme = "README.md"
repository = "https://github.com/menhera-org/ftth-rtnl"
homepage = "https://github.com/menhera-org/ftth-rtnl"

[dependencies]
ftth-common = "0.1"
futures = "0.3.31"
ipnet = "2.11"
log = "0.4.28"
netlink-packet-core = "0.8"
netlink-packet-route = "0.25"
netlink-proto = "0.12"
rtnetlink = "0.18"
tokio = { version = "1", features = ["full"] }

[dev-dependencies]
clap = { version = "4.5", features = ["derive"] }
